--- a/.github/workflows/schedaily.yml
+++ b/.github/workflows/schedaily.yml
@@ -2,7 +2,7 @@ name: Daily Commit
 
 on:
   schedule:
-    - cron: "0 1 * * *"  # Runs daily at 01:00 UTC (adjust as needed)
+    - cron: "55 * * * *"  # Runs daily at 01:00 UTC (adjust as needed)
   workflow_dispatch:  # Allows manual triggering
 
 jobs:
