--- a/.github/workflows/schedaily.yml
+++ b/.github/workflows/schedaily.yml
@@ -2,7 +2,7 @@ name: Daily Commit
 
 on:
   schedule:
-    - cron: "55 * * * *"  # Runs daily at 01:00 UTC (adjust as needed)
+    - cron: "10 * * * *"  # Runs daily at 01:00 UTC (adjust as needed)
   workflow_dispatch:  # Allows manual triggering
 
 jobs:
@@ -18,9 +18,12 @@ jobs:
           echo "$(date) - Automated commit" >> daily-log.txt
 
       - name: Commit and push changes
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
         run: |
           git config --global user.name "GitHub Actions Bot"
           git config --global user.email "23f1002226@ds.study.iitm.ac.in"
           git add daily-log.txt
-          git commit -m "Automated commit on $(date)"
-          git push
+          git commit -m "Automated commit on $(date)" || exit 0  # Avoid error if no changes
+          git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}.git
+          git push origin main
