--- a/.github/workflows/schedaily.yml
+++ b/.github/workflows/schedaily.yml
@@ -21,8 +21,8 @@ jobs:
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
         run: |
-          git config --global user.name "GitHub Actions Bot"
-          git config --global user.email "23f1002226@ds.study.iitm.ac.in"
+          git config --local user.name "GitHub Actions Bot"
+          git config --local user.email "23f1002226@ds.study.iitm.ac.in"
           git add daily-log.txt
           git commit -m "Automated commit on $(date)" || exit 0  # Avoid error if no changes
           git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}.git
